# internal/pkg/models/users/user.go
@@ -7,9 +7,9 @@ import (
 
 type User struct {
 	models.Model
-	Username  string   `gorm:"column:username;not null;" json:"username"`
-	Firstname string   `gorm:"column:firstname;not null;" json:"firstname"`
-	Lastname  string   `gorm:"column:lastname;not null;" json:"lastname"`
+	Username  string   `gorm:"column:username;not null;" json:"username" form:"username"`
+	Firstname string   `gorm:"column:firstname;not null;" json:"firstname" form:"firstname"`
+	Lastname  string   `gorm:"column:lastname;not null;" json:"lastname" form:"lastname"`
 	Hash      string   `gorm:"column:hash;not null;" json:"hash"`
 	Role      UserRole `gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 }
